--- a/AStar.Tests/AStar.Tests.csproj
+++ b/AStar.Tests/AStar.Tests.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.SDK" Version="16.2.0" />
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="Shouldly" Version="4.0.0-beta0002" />
+    <PackageReference Include="nunit" Version="3.13.3" />
+    <PackageReference Include="Shouldly" Version="4.2.1" />
   </ItemGroup>
 
   <ItemGroup>
