--- a/AStar/AStar.csproj
+++ b/AStar/AStar.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <PackageId>AStarLite</PackageId>
     <Title>AStar Lite</Title>
     <Authors>Val Antonini</Authors>
@@ -12,7 +13,6 @@
     <PackageTags>Pathfinding;A*;AStar;Algorithms</PackageTags>
     <RootNamespace>AStar</RootNamespace>
     <LangVersion>latest</LangVersion>
-    <TargetFrameworks>net5.0;net6.0;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
